--- a/BootstrapTest/DivOrdering.html
+++ b/BootstrapTest/DivOrdering.html
@@ -26,7 +26,16 @@
         <div class="row">
 
             <div class="col-md-6">
+                <div class="row">
+                    <h4>Main Heading</h4>
+                    <div class="col-md-6">
+                        <p>Sub Heading  1</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Sub Heading 2</p>
+                    </div>
 
+                </div>
             </div>
             <div class="col-md-6">
 
