--- a/BootstrapTest/DivOrdering.html
+++ b/BootstrapTest/DivOrdering.html
@@ -37,7 +37,16 @@
 
                 </div>
             </div>
+            <!--negative margin-->
             <div class="col-md-6">
+                <div class="row">
+                    <div style="background-color:white" class="col-md-6 me-lg-n3">
+                        <p>Para One</p>
+                    </div>
+                    <div style="background-color:blue" class="col-md-6">
+                        <p>Para Two</p>
+                    </div>
+                </div>
 
             </div>
         </div>
