--- a/BootstrapTest/DisplayFlex.html
+++ b/BootstrapTest/DisplayFlex.html
@@ -10,21 +10,14 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <a href="" class="btn btn-primary">Demo</a>
-
     <div class="container">
-        <div class="row flex-row-reverse">
-           <div class="offset-md-3 col-md-3  stl">Col 1</div>
-           <div class="col-md-3 stl">Col 2</div>
-           <div class="col-md-3 stl order-first">Col 3</div>
-          
+
+        <div class="d-flex" style="border:2px solid red;">
+            <div class="order-1" style="border:2px solid blue;background-color:wheat;">Div 1</div>
+            <div class="order-3" style="border:2px solid blue;background-color:wheat;">Div 2</div>
+            <div class="order-2" style="border:2px solid blue;background-color:wheat;">Div 3</div>
         </div>
-        <div class="row">
-            row 2
-        </div>
-        <div class="row">
-            row 3
-        </div>
+
     </div>
 </body>
 </html>
