--- a/BootstrapTest/Text-Formatting.html
+++ b/BootstrapTest/Text-Formatting.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="col-md-12">
-
+                  <!--we can define btn-groups inside btn-toolbar-->
                 <div class="btn-group">
                     <button class="btn btn-primary">Click</button>
                     <button class="btn btn-warning">Click</button>
